Pequeños ajustes en la generacion del token y se ha creado endpoint de cursos