@@ -11,7 +11,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -24,6 +23,9 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import javax.crypto.SecretKey;
 import java.util.Collections;
@@ -49,15 +51,8 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/admin").hasRole("ADMIN")
-                        .requestMatchers("/user").hasRole("USER")
-                        .requestMatchers(MainController.BASE_PATH +"/auth/login").permitAll()
-                        .anyRequest().authenticated()
-                )
-                .csrf().disable()
-                .addFilterBefore(new JwtFilter(jwtSecretKey()), UsernamePasswordAuthenticationFilter.class);
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource())).csrf(csrf -> csrf.disable()) // típico en APIs REST
+                .authorizeHttpRequests(auth -> auth.requestMatchers("/admin").hasRole("ADMIN").requestMatchers("/user").hasRole("USER").requestMatchers(MainController.BASE_PATH + "/auth/login").permitAll().anyRequest().authenticated()).addFilterBefore(new JwtFilter(jwtSecretKey()), UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
@@ -69,9 +64,9 @@ public class SecurityConfig {
             public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
 
 
-                if(username.equalsIgnoreCase("admin")){
+                if (username.equalsIgnoreCase("admin")) {
                     return new User("admin", passwordEncoder().encode("admin"), List.of(new SimpleGrantedAuthority("ROLE_ADMIN")));
-                }else {
+                } else {
                     return new User("user", passwordEncoder().encode("user"), List.of(new SimpleGrantedAuthority("ROLE_USER")));
                 }
 
@@ -86,16 +81,29 @@ public class SecurityConfig {
     }
 
 
-//    @Bean
+    //    @Bean
 //    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
 //
 //        System.out.println("Arrancando Auth Manager?");
 //        return authenticationConfiguration.getAuthenticationManager();
 //    }
-@Bean
-public AuthenticationManager authenticationManager(MoodleAuthenticationProvider moodleProvider) {
-    return new ProviderManager(Collections.singletonList(moodleProvider));
-}
+    @Bean
+    public AuthenticationManager authenticationManager(MoodleAuthenticationProvider moodleProvider) {
+        return new ProviderManager(Collections.singletonList(moodleProvider));
+    }
+
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of("http://localhost:4200"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        return source;
+    }
 
 }
 
